--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@nuxtjs/svg": "^0.1.12",
-    "@nuxtjs/tailwindcss": "^3.2.0"
+    "@nuxtjs/tailwindcss": "^3.2.0",
+    "push-dir": "^0.4.1"
   }
 }
