--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "nuxt-i18n": "^6.20.4"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/svg": "^0.1.12",
-    "@nuxtjs/tailwindcss": "^3.2.0",
-    "push-dir": "^0.4.1"
+    "@nuxtjs/tailwindcss": "^3.4.3",
+    "push-dir": "^0.4.1",
+    "tailwindcss-dark-mode": "^1.1.7"
   }
 }
