--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "core-js": "^3.6.5",
+    "@nuxt/content": "^1.15.1",
+    "core-js": "^3.20.0",
     "nuxt": "^2.15.8",
-    "nuxt-i18n": "^6.20.4"
+    "nuxt-i18n": "^6.28.1"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/svg": "^0.1.12",
-    "@nuxtjs/tailwindcss": "^3.4.3",
-    "push-dir": "^0.4.1",
-    "tailwindcss-dark-mode": "^1.1.7"
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "css-loader": "^5.0.0",
+    "postcss": "^8.1.10",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-url": "^10.1.1",
+    "push-dir": "^0.4.1"
   }
 }
