--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
       - name: Static HTML export with Nuxt
-        run: pnpm run generate
+        run: pnpm run build --preset=github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
