--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d dist --cname lukaszrados.pl"
+    "deploy": "gh-pages -d .output/public --cname www.lukaszrados.pl"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
