--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # https://github.com/actions/deploy-pages#usage
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages Action
 on: [workflow_dispatch]
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
           cache: "pnpm"
       # Pick your own package manager and build script
       - run: pnpm install
-      - run: pnpm run build --preset=github_pages
+      - run: pnpm run generate --preset=github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
