--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d .output/public --cname www.lukaszrados.pl"
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/i18n": "8.0.0-rc.5",
-    "gh-pages": "^6.1.0",
     "nuxt": "3.8.0",
+    "nuxt-feedme": "^1.0.0",
     "postcss-nested": "^6.0.1",
     "postcss-nested-ancestors": "^3.0.0",
     "vue": "^3.3.7",
