--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/i18n": "8.0.0-rc.5",
-    "nuxt": "3.8.0",
+    "nuxt": "^3.8.2",
     "nuxt-feedme": "^1.0.0",
     "postcss-nested": "^6.0.1",
     "postcss-nested-ancestors": "^3.0.0",
-    "vue": "^3.3.7",
+    "vue": "^3.3.12",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
