--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/i18n": "8.0.0-rc.5",
-    "nuxt": "^3.8.2",
-    "nuxt-feedme": "^1.0.0",
+    "@nuxtjs/color-mode": "3.4.2",
+    "@nuxtjs/i18n": "8.3.1",
+    "nuxt": "3.12.4",
+    "nuxt-feedme": "1.0.0",
     "postcss-nested": "^6.0.1",
     "postcss-nested-ancestors": "^3.0.0",
-    "vue": "^3.3.12",
-    "vue-router": "^4.2.5"
+    "vue": "3.4.33",
+    "vue-router": "4.4.0"
   },
   "dependencies": {
-    "@nuxt/content": "^2.9.0"
+    "@nuxt/content": "2.13.2"
   }
 }
